--- a/src/app/features/presentation/presentation.component.html
+++ b/src/app/features/presentation/presentation.component.html
@@ -17,7 +17,7 @@
         }
       </div>
       <div>
-        <img class="w-full shadow-xl rounded-image  object-cover" [src]="technologySection.image"
+        <img class="w-full rounded-image  object-cover" [src]="technologySection.image"
           [alt]="technologySection.imageAlt" loading="lazy" />
       </div>
     </div>
