--- a/src/app/features/contact/contact.component.html
+++ b/src/app/features/contact/contact.component.html
@@ -15,7 +15,7 @@
     </div>
     <form class="grid max-w-lg grid-cols-1 grid-rows-[auto_auto] gap-6" #contactFormRef="ngForm"
       (ngSubmit)="handleContactSubmit(contactFormRef)">
-      <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
+      <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
         @for (field of contactFields; track field.key) {
         <div class="relative">
           <input [type]="field.type" [id]="field.key" [name]="field.key" [(ngModel)]="contactForm[field.key]"
@@ -46,15 +46,15 @@
       </div>
 
       <label class="grid w-full gap-2">
-        <span class=" text-gray-700" i18n="@@contactFormSubject">
+        <span class="transition-colors font-medium text-gray-500" i18n="@@contactFormSubject">
           Sujet de votre demande
         </span>
 
-        <select class="rounded-form border border-scheme-border bg-white px-3 py-2 text-gray-700
+        <select class="rounded-form border border-scheme-border bg-white px-3 py-2 font-medium text-gray-500
          focus:border-scheme-accent focus:outline-none transition-colors" name="subject" required
           [(ngModel)]="contactForm.subject" #subjectCtrl="ngModel"
           [class.border-red-500]="subjectCtrl.invalid && (subjectCtrl.touched || isContactSubmitted)">
-          <option value="" class="font-semibold text-gray-700" disabled i18n="@@contactFormSubjectPlaceholder">
+          <option value="" class="font-semibold  text-gray-500" disabled i18n="@@contactFormSubjectPlaceholder">
             Sélectionnez un sujet
           </option>
           @for (subject of contactInfo.subjects; track $index) {
@@ -70,7 +70,7 @@
       </label>
       <!-- Rôle -->
       <div class="grid w-full items-center py-3 md:py-4">
-        <span class="mb-3 md:mb-4 text-gray-700" i18n="@@contactFormRole">Qui êtes-vous ?</span>
+        <span class="mb-3 md:mb-4 font-medium text-gray-500" i18n="@@contactFormRole">Qui êtes-vous ?</span>
         <fieldset class="space-y-3 grid grid-cols-2 gap-x-6 gap-y-3.5">
           @for (role of contactInfo.roles; track $index) {
           <legend class="sr-only">{{ role }}</legend>
@@ -79,7 +79,7 @@
             <label for="{{ role }}"
               class="flex items-center justify-between space-x-2 gap-4 rounded border border-gray-300 bg-white p-3 text-sm font-medium shadow-sm transition-colors hover:bg-gray-50 has-checked:border-blue-600 has-checked:ring-1 has-checked:ring-blue-600">
               <div>
-                <p class="text-gray-700">{{ role }}</p>
+                <p class="text-gray-500">{{ role }}</p>
               </div>
               <input [(ngModel)]="contactForm.role" type="radio" name="DeliveryOption" [value]="role" id="{{ role }}"
                 class="size-5 border-gray-300" checked="">
