--- a/src/app/features/client-project/client-project.component.html
+++ b/src/app/features/client-project/client-project.component.html
@@ -6,13 +6,16 @@
   data-testid="projects-section">
   <div class="container">
     <!-- header -->
-    <div class="mx-auto mb-10 w-full max-w-2xl text-center md:mb-14 lg:mb-16">
-      <p class="mb-3 font-semibold md:mb-4">{{ project.label }}</p>
-      <h2 class="font-heading md:heading-h3 md:text-h3 text-4 heading-h4 mb-5 md:mb-6">{{ project.title }}</h2>
-      <p class="md:text-md whitespace-pre-line">{{ project.description }}</p>
+    <div class="mx-auto mb-4 w-full max-w-2xl text-center md:mb-8 lg:mb-12">
+      <div class="flex  flex-col items-center justify-center">
+        <p class="mb-1 font-semibold md:mb-2">{{ project.label }}</p>
+        <h2 class="font-heading md:heading-h3 md:text-h3 text-4 heading-h4 mb-2 md:mb-3 lg:whitespace-nowrap">{{
+          project.title }}</h2>
+        <p class="md:text-md whitespace-pre-line">{{ project.description }}</p>
+      </div>
 
       @if (project.actions?.length) {
-      <div class="mt-6 flex flex-wrap items-center justify-center gap-4 md:mt-8">
+      <div class="mt-2 flex flex-wrap items-center justify-center gap-4 md:mt-4">
         @for (action of project.actions; track $index) {
         <a href="{{ action.href }}"
           class="rounded-2xl button px-5 py-2 text-sm font-semibold transition-colors duration-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2"
@@ -32,9 +35,9 @@
     @if (project.kind === 'singleCard') {
     <div
       class="rounded-2xl md:shadow-xl md:overflow-hidden  grid grid-cols-1 overflow-hidden border border-border-primary bg-neutral-white md:grid-cols-2">
-      <div class="flex flex-col justify-center p-6 md:p-8 lg:p-12">
+      <div class="flex flex-col justify-center p-3 md:p-5 lg:p-8">
         <p class="mb-2 text-sm font-semibold">{{ project.card.kicker }}</p>
-        <h3 class="font-heading md:heading-h3 md:text-h3 text-4 heading-h4 mb-5 md:mb-6">
+        <h3 class="font-heading md:heading-h3 md:text-h3 text-4 heading-h4 mb-3 md:mb-4">
           {{ project.card.heading }}
         </h3>
         <ul class="mt-4 list-disc space-y-2 pl-5">
