--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,10 +21,10 @@
 
   /* Fonts : tu peux ajouter font-heading aux titres si tu veux le serif */
   .font-heading {
-    font-family: 'Cormorant Garamond', serif;
+    font-family: "Nunito", italic, system-ui, sans-serif;
   }
   .font-body {
-    font-family: 'Merriweather Sans', system-ui, sans-serif;
+    font-family: "Merriweather Sans", system-ui, sans-serif;
   }
 }
 
