--- a/src/app/features/growth-audit/growth-audit.component.html
+++ b/src/app/features/growth-audit/growth-audit.component.html
@@ -126,9 +126,9 @@
       }
     </div>
   </div>
-  <div class="border border-scheme-border col-span-12 md:col-span-6 bg-white p-6">
+  <div class="border border-scheme-border col-span-12 md:col-span-6 bg-white p-6 image-background-audit ">
     <h2 class="font-heading heading-h3 text-h3 mb-4" i18n="@@auditStepsTitle">Comment ça fonctionne</h2>
-    <div class="space-y-4 flex h-fit flex-col justify-between">
+    <div class="space-y-4 ">
       @for (step of steps; track step.title) {
       <p class="font-semibold text-base md:text-lg">{{ step.title }}</p>
       <ul class="list-disc ms-8 space-y-2 text-sm md:text-base text-gray-700">
@@ -138,6 +138,7 @@
       </ul>
       }
     </div>
+
   </div>
 
 </section>
